# RTSNavigationLib

./: .gitignore  .gitmodules  CMakeLists.txt  Minimal.runsettings  README.md  VisualStudioTest.runsettings  todo.txt  vcpkg.json
RTSNavigationLib/: CMakeLists.txt
RTSNavigationLib/Source/RTSNavigationLib/: Body.h  BodyUtil.cpp  BodyUtil.h  MajorDirection2D.h  WorldBody.cpp  WorldBody.h
RTSNavigationLib/Source/RTSNavigationLib/Flocking/: Boid.cpp  Boid.h  Flock.cpp  Flock.h
RTSNavigationLib/Source/RTSNavigationLib/Formation/: DistributeUniform.cpp  DistributeUniform.h  Formation.cpp  Formation.h  FormationCalculator.cpp  FormationCalculator.h  UnitPlacement.cpp  UnitPlacement.h  UnitPlacementBehavior.cpp  UnitPlacementBehavior.h
RTSNavigationLib/Source/RTSNavigationLib/Formation/FormationShape/: ArcFormationShape.cpp  ArcFormationShape.h  FormationShape.cpp  FormationShape.h  FormationShapeFactory.cpp  FormationShapeFactory.h  RectangleFormationShape.cpp  RectangleFormationShape.h  RectangleInterfacePoint.h  ScalingBehavior.cpp  ScalingBehavior.h  TriangleFormationShape.cpp  TriangleFormationShape.h  TriangleInterfacePoint.h
RTSNavigationLib/Source/RTSNavigationLib/Pathfinding/: DijkstraGrid.cpp  DijkstraGrid.h  EikonalGrid.cpp  EikonalGrid.h  FlowField.cpp  FlowField.h  GridOfGrids.cpp  GridOfGrids.h  Map.cpp  Map.h  MapChunk.cpp  MapChunk.h  Portal.cpp  Portal.h
RTSNavigationLib/Source/RTSNavigationLib/Pathfinding/GridOfGrids/: GridOfGrids.cpp  GridOfGrids.h  PortalNode.cpp  PortalNode.h
RTSNavigationLib/Source/RTSNavigationLib/Usher/: AssignmentProblemDualKDTree.cpp  AssignmentProblemDualKDTree.h  AssignmentProblemMinCostFlow.cpp  AssignmentProblemMinCostFlow.h  BoostMinCostFlowExample.cpp  BoostMinCostFlowExample.h  Usher.cpp  Usher.h
RTSNavigationLib/Source/RTSNavigationLib/Util/: AssignmentProblemSolver.cpp  AssignmentProblemSolver.h  Geometry2D.cpp  Geometry2D.h  RTree2D.cpp  RTree2D.h  String2File.cpp  String2File.h  glmBoostGeometry.cpp  glmBoostGeometry.h  svg.cpp  svg.h
RTSNavigationLib/Source/RTSNavigationLib/Util/HexagonGrid/: Hex2DVoxelizer.cpp  Hex2DVoxelizer.h  HexGridSvg.cpp  HexGridSvg.h  HexGridUtils.cpp  HexGridUtils.h  TopFlatHexGrid.h
RTSNavigationLib/Source/RTSNavigationLib/Util/RectangleGrid/: RectangleGrid.h  RectangleGridSvg.cpp  RectangleGridSvg.h  RectangleGridVoxelizer.cpp  RectangleGridVoxelizer.h
RTSPathingLib/: CMakeLists.txt
RTSPathingLib/Source/RTSPathingLib/: Body.h  BodyUtil.cpp  BodyUtil.h  HelloWorld.cpp  HelloWorld.h  RectangleFormatter.cpp  RectangleFormatter.h  Usher.cpp  Usher.h
RTSPathingLib/Source/RTSPathingLib/Flocking/: Boid.cpp  Boid.h  Flock.cpp  Flock.h
RTSPathingLib/Source/RTSPathingLib/Formation/: ArcFormationShape.cpp  ArcFormationShape.h  Formation.cpp  Formation.h  FormationCalculator.cpp  FormationCalculator.h  FormationShape.cpp  FormationShape.h  FormationShapeFactory.h  RectangleFormationShape.cpp  RectangleFormationShape.h  ScalingBehavior.h  TriangleFormationShape.cpp  TriangleFormationShape.h  UnitPlacement.cpp  UnitPlacement.h  UnitPlacementBehavior.cpp  UnitPlacementBehavior.h
RTSPathingLib/Source/RTSPathingLib/Formation/FormationShape/: ArcFormationShape.cpp  ArcFormationShape.h  FormationShape.cpp  FormationShape.h  FormationShapeFactory.cpp  FormationShapeFactory.h  RectangleFormationShape.cpp  RectangleFormationShape.h  ScalingBehavior.h  TriangleFormationShape.cpp  TriangleFormationShape.h  TriangleInterfacePoint.h
RTSPathingLib/Source/RTSPathingLib/Hexagon/: Hex2DVoxelizer.cpp  Hex2DVoxelizer.h  HexGrid.h  HexGridSvg.cpp  HexGridSvg.h  HexGridUtils.cpp  HexGridUtils.h  TopFlatHexGrid.h
RTSPathingLib/Source/RTSPathingLib/Usher/: BoostMinCostFlowExample.cpp  Usher.cpp  Usher.h
RTSPathingLib/Source/RTSPathingLib/Util/: AssignmentProblemSolver.cpp  AssignmentProblemSolver.h  Geometry2D.cpp  Geometry2D.h  RTree2D.cpp  RTree2D.h  glmBoostGeometry.cpp  glmBoostGeometry.h  svg.cpp  svg.h
RTSPathingLib/Source/RTSPathingLib/Util/Hexagon/: Hex2DVoxelizer.h  TopFlatHexGrid.h
RTSPathingLib/Source/RTSPathingLib/Util/HexagonGrid/: Hex2DVoxelizer.cpp  Hex2DVoxelizer.h  HexGridSvg.h  HexGridUtils.cpp  HexGridUtils.h  TopFlatHexGrid.h
RTSPathingLib/Source/RTSPathingLib/Util/RectangleGrid/: RectangleGrid.cpp  RectangleGrid.h  RectangleGridSvg.cpp  RectangleGridSvg.h  RectangleGridVoxelizer.cpp  RectangleGridVoxelizer.h
Test/: CMakeLists.txt
Test/Tests/: BodyUtilTest.cpp  DijkstraGridTest.cpp  EikonalGridTest.cpp  FlockTest.cpp  FlowFieldTest.cpp  FormationTest.cpp  HelloWorldTest.cpp  HexagonGridTest.cpp  HexagonTest.cpp  MapChunkTest.cpp  MapTest.cpp  RTree2DTest.cpp  RectangleFormatterTest.cpp  RectangleGridTest.cpp  UnitPlacementTest.cpp  UsherTest.cpp
godot/: build_all.bat  build_extension.bat  godot.bat
godot/GodotProject/: FormationCalculator.svg.import  Place.tscn  RTS2DCam.gd  Unit.tscn  UnitCircle.png.import  UnitPlacement.svg.import  icon.svg.import  mai896C.tmp  main.tscn  move_to_target.gd  project.godot  statictest.gd  usherTest.tscn
godot/GodotProject/FormationEditor/: Circle.png.import  Rect.png.import  Swordsman.tres  Triangle.png.import  category_ui.gd  category_ui.tscn  character_ui.gd  character_ui.tscn  formation_editor_singleton.gd  main.gd  main.tscn  scene_selection.tscn  unit_type.gd  unit_type_ui.gd  unit_type_ui.tscn
godot/GodotProject/FormationEditor/Formation/: formation.gd  formation_hierarchy_ui.gd  formation_inspector.gd  (+19 more)
godot/GodotProject/StaticTest/: Place.tscn  Unit.tscn  mouse_drag_drop.gd  statictest.gd  statictest.tscn  usherTest.tscn
godot/Scripts/: build.bat  compileBindings.bat  compileEngine.bat  compileExtension.bat  compileTemplates.bat  prepareWeb.bat
godot/extension/: CMakeLists.txt  RTSBody.cpp  RTSBody.h  RTSFormation.cpp  RTSFormation.h  RTSFormationShape.cpp  RTSFormationShape.h  RTSNavigation.cpp  RTSNavigation.h  RTSShapeArc.cpp  RTSShapeArc.h  RTSShapeCircle.cpp  RTSShapeCircle.h  RTSShapeRect.cpp  RTSShapeRect.h  RTSShapeTri.cpp  RTSShapeTri.h  SConstruct  gdexample.cpp  gdexample.h  register_types.cpp
godot/scons/: scons.1
(+8 files in other folders)
